[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_simple"
version = "0.0.1"
authors = [
  { name="Sara Czasak", email="sara.p.czasak.m@gmail.com" },
]
description = "A package to make complex python functionality simple"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["py_simple_package/src"]